service: add backup and change git repo url
