# services/api/docs/swagger.yaml
@@ -789,6 +789,8 @@ definitions:
   system.ChangeUserPassword:
     properties:
       password:
+        maxLength: 16
+        minLength: 4
         type: string
     required:
     - password
@@ -796,8 +798,12 @@ definitions:
   system.ChangeUserPasswordBySelf:
     properties:
       new_password:
+        maxLength: 16
+        minLength: 4
         type: string
       old_password:
+        maxLength: 16
+        minLength: 4
         type: string
     required:
     - new_password
@@ -806,6 +812,8 @@ definitions:
   system.CreateUserData:
     properties:
       password:
+        maxLength: 16
+        minLength: 4
         type: string
       username:
         type: string
@@ -934,6 +942,72 @@ info:
   title: Ocserv User management Example Api
   version: "1.0"
 paths:
+  /backup/ocserv_groups:
+    get:
+      description: Download gzip compressed JSON backup of all ocserv groups including
+        default group configuration
+      parameters:
+      - description: Bearer TOKEN
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - application/gzip
+      responses:
+        "200":
+          description: ocserv_groups_backup.json.gz
+          schema:
+            type: file
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/request.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.Unauthorized'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middlewares.PermissionDenied'
+      summary: Backup ocserv groups
+      tags:
+      - ocserv-backup
+  /backup/ocserv_users:
+    get:
+      description: Download gzip compressed JSON backup of all ocserv users (including
+        default group mapping if exists)
+      parameters:
+      - description: Bearer TOKEN
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - application/gzip
+      responses:
+        "200":
+          description: ocserv_users_backup.json.gz
+          schema:
+            type: file
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/request.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.Unauthorized'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middlewares.PermissionDenied'
+      summary: Backup ocserv users
+      tags:
+      - ocserv-backup
   /customers/disconnect_sessions:
     post:
       consumes:
